--- a/static/css/z_style.css
+++ b/static/css/z_style.css
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-cover {
-    height: 800px;
+    height: 500px;
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
@@ -409,6 +409,10 @@ h1, h2, h3, h4, h5, h6, figure {
     margin-top: 100px;
 }
 
+.fh5co-cover .display-tc {
+    margin-top: 10px;
+
+}
 @media screen and (max-width: 768px) {
     .fh5co-cover .display-t,
     .fh5co-cover .display-tc {
@@ -460,10 +464,15 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header .display-tc h1,
 #fh5co-counter .display-tc h1,
 .fh5co-cover .display-tc h1 {
+    margin-top: -175px;
     margin-bottom: 20px;
-    font-size: 54px;
+    font-size: 52px;
     line-height: 1.3;
     font-weight: 300;
+}
+
+.fh5co-cover .display-tc h2 li {
+    list-style: none;
 }
 
 @media screen and (max-width: 768px) {
@@ -801,13 +810,13 @@ h1, h2, h3, h4, h5, h6, figure {
     position: absolute;
     right: 20px;
     left: 20px;
-    bottom: 50px;
-    color: #fff;
+    bottom: 30px;
+    color: orange;
+    font-family: "Microsoft YaHei";
     margin: 0;
     padding: 0;
-    opacity: 1;
     font-size: 30px;
-    font-weight: 300;
+    font-weight: 600;
     visibility: visible;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
@@ -1832,13 +1841,13 @@ h1, h2, h3, h4, h5, h6, figure {
 
 /*下面是footer样式*/
 .footer-section {
-    background-color: #099ecb;
+    background-color: #EEE;
     margin-top: 500px;
     padding-top: 50px;
 }
 
 .footer-section .container p, .footer-section .container li {
-    color: #333;
+    color: black;
 }
 
 .footer-section .container p {
@@ -1851,10 +1860,9 @@ h1, h2, h3, h4, h5, h6, figure {
     left: 50%;
     margin-left: -250px;
     top: 100px;
-    background-color: rgba(255, 251, 240, 0.6);
+    background-color: rgb(255, 251, 240);
     padding: 15px;
     text-align: center;
-    opacity: 0.8;
     position: absolute;
 
 }
@@ -1887,6 +1895,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .modal_data span {
+    margin-left: 140px;
     display: inline-block;
     width: 200px;
     /*visibility: hidden;*/
@@ -1913,7 +1922,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .mod-register {
     width: 500px;
-    background-color: rgba(255, 251, 240, 0.6);
+    background-color: rgb(255, 251, 240);
     left: 50%;
     margin-left: -250px;
     top: 60px;
@@ -1972,10 +1981,10 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .mod-register .getmessage {
-    font-size: 12px;
-    width: 102px;
-    line-height: 24px;
     border-radius: 5px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: 1px solid #eee;
 
 }
 
@@ -2081,7 +2090,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .forget_pwd {
-    background-color: rgba(255, 251, 240, 0.6);
+    background-color: rgb(255, 251, 240);
     width: 500px;
     position: absolute;
     left: 50%;
@@ -2139,7 +2148,7 @@ input[type="radio"], input[type="checkbox"] {
 
 .forget_pwd button[name=get_code] {
     border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgb(0, 0, 0);
     color: white;
     border: 1px solid #eee;
 }
@@ -2156,4 +2165,16 @@ input[type="radio"], input[type="checkbox"] {
 
 #id_account {
     margin-left: 5px;
+}
+
+.forget_pwd button[name=getmessage] {
+    border-radius: 5px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: 1px solid #eee;
+}
+
+.article_img {
+    width: 335px;
+    height: 210px;
 }
