--- a/templates/m_teacher.html
+++ b/templates/m_teacher.html
@@ -129,19 +129,21 @@
                     {% for d in detail_list %}
                         {% for g in grent_list %}
                             {% if g.g_did_id == d.d_id %}
-                        <tr nid="{{ d.d_id }}" id="stu">
-                            <td na="d_id" class=" kb" style="display: none">{{ d.d_id }}</td>
-                            <td na="d_name" class=" kb">{{ d.d_name }}</td>
-                            <td na="d_number" class=" kb">{{ d.d_number }}</td>
-                            <td na="d_time_length" class=" kb">{{ d.d_time_length }}</td>
-                            <td na="d_create_time" class=" kb">{{ g.g_time|strd_time }}</td>
-                            <td na="d_cid_id" class=" kb" style="display: none">{{ d.d_cid_id }}</td>
-                            <td na="d_detail" class="wth">{{ d.d_detail }}</td>
-                            <td na="d_remark" class="wth">{{ d.d_remark }}</td>
-                            <td class="info">
-                                <a href="#"  class="editdetail fa fa-pencil-square-o"></a>
-                            </td>
-                        </tr>
+                                <tr nid="{{ d.d_id }}" id="stu">
+                                    <td na="t_id" class=" kb" style="display: none">{{ tid }}</td>
+                                    <td na="g_id" class=" kb" style="display: none">{{ g.g_id }}</td>
+                                    <td na="d_id" class=" kb" style="display: none">{{ d.d_id }}</td>
+                                    <td na="d_name" class=" kb">{{ d.d_name }}</td>
+                                    <td na="d_number" class=" kb">{{ d.d_number }}</td>
+                                    <td na="d_time_length" class=" kb">{{ d.d_time_length }}</td>
+                                    <td na="d_create_time" class=" kb">{{ g.g_time|strd_time }}</td>
+                                    <td na="d_cid_id" class=" kb" style="display: none">{{ d.d_cid_id }}</td>
+                                    <td na="d_detail" class="wth">{{ d.d_detail }}</td>
+                                    <td na="d_remark" class="wth">{{ d.d_remark }}</td>
+                                    <td class="info">
+                                        <a href="#" class="editdetail fa fa-pencil-square-o"></a>
+                                    </td>
+                                </tr>
                             {% endif %}
                         {% endfor %}
                     {% endfor %}
@@ -164,6 +166,18 @@
                                         <label for="inputd_id" class="col-sm-2 control-label">ID</label>
                                         <div class="col-sm-10">
                                             <input type="text" class="form-control" name="d_id" disabled>
+                                        </div>
+                                    </div>
+                                    <div class="form-group" style="display: none">
+                                        <label for="inputd_id" class="col-sm-2 control-label">GID</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="g_id" disabled>
+                                        </div>
+                                    </div>
+                                    <div class="form-group" style="display: none">
+                                        <label for="inputd_id" class="col-sm-2 control-label">TID</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="t_id" disabled>
                                         </div>
                                     </div>
 
@@ -189,7 +203,7 @@
                                     <div class="form-group">
                                         <label for="inputd_create_time" class="col-sm-2 control-label">上课时间</label>
                                         <div class="form-group" style="width: 470px;margin-left: 115px">
-{#                                            <input type="text" class="form-control" name="d_create_time">#}
+                                            {#                                            <input type="text" class="form-control" name="d_create_time">#}
                                             <input type="datetime-local" class="form-control" id="d_create_time"
                                                    placeholder="请输入审核结束时间">
                                         </div>
@@ -275,18 +289,29 @@
                             <td class=" su" na="grent_d_name">{{ row.grent_d_name }}</td>
                             <td class=" su" na="grent_s_name">{{ row.grent_s_name }}</td>
 
-                            {% if  row.grent_time == location_time %}
-                                <td class=" su" na="grent_time">{{ row.grent_time }}</td>
-                                {% if  row.grent_j_url != 'error' %}
-                                    <td class=" su" na="grent_j_url"><a
-                                            href="http://{{ grent_join_urlstrd_time }}">点击上课</a></td>
+
+
+                            {% if row.grent_record == '0' %}
+                                {% if  row.grent_time <= location_time %}
+                                    <td class=" su" na="grent_time">{{ row.grent_time|strd_time }}</td>
+                                    {% if  row.grent_j_url != 'error' %}
+                                        <td class=" su" na="grent_j_url"><a
+                                                href="{{ row.grent_j_url }}">点击上课</a></td>
+                                    {% else %}
+                                        <td class=" su" na="grent_j_url">暂无连接</td>
+                                    {% endif %}
                                 {% else %}
+                                    <td class=" su" na="grent_time">{{ row.grent_time|strd_time }}</td>
                                     <td class=" su" na="grent_j_url">暂无连接</td>
                                 {% endif %}
+                            {% elif row.grent_record == '1' %}
+                                <td class=" su" na="grent_time">{{ row.grent_time|strd_time }}</td>
+                                <td class=" su" na="grent_j_url">已完成</td>
                             {% else %}
                                 <td class=" su" na="grent_time">{{ row.grent_time|strd_time }}</td>
-                                <td class=" su" na="grent_j_url">暂无连接</td>
+                                <td class=" su" na="grent_j_url">已取消</td>
                             {% endif %}
+
                             {% if row.grent_record == '0' %}
                                 <td class=" su" na="grent_record">未上课</td>
                             {% elif row.grent_record == '1' %}
@@ -427,7 +452,6 @@
 
         });
 
-
         {#评价#}
 
         function bindEvaluatestudent() {
@@ -537,46 +561,51 @@
                 $('#myModal').modal('show');
                 $(this).parent().prevAll().each(function () {
                     var v = $(this).text();
-                    console.log(v);
+                    {#console.log(v);#}
                     var n = $(this).attr('na');
 
-                        $("#myModal input[name='" + n + "']").val(v)
+                    $("#myModal input[name='" + n + "']").val(v)
                 })
             });
-        }
+        };
 
         function bindEditConfirm() {
             $('#editdetail').click(function () {
                 {#var portData = {};#}
-                 var data = $("#d_create_time").val();
-                    var remark = $("[name='d_remark']").val();
-                    var did = $("[name='d_id']").val();
-                    console.log(data);
+                var data = $("#d_create_time").val();
+                var remark = $("[name='d_remark']").val();
+                var did = $("[name='d_id']").val();
+                var tid = $("[name='t_id']").val();
+                var gid = $("[name='g_id']").val();
+                console.log(data);
                 {#console.log(remark);#}
-                {#console.log(did);#}
                 $.ajax({
                     url: '/editdetail/',
                     type: 'POST',
                     dataType: 'JSON',
-                    data:{
-                        csrfmiddlewaretoken:$("[name='csrfmiddlewaretoken']").val(),
-                        data:data,
-                        remark:remark,
-                        did:did
+                    data: {
+                        csrfmiddlewaretoken: $("[name='csrfmiddlewaretoken']").val(),
+                        data: data,
+                        remark: remark,
+                        did: did,
+                        tid: tid,
+                        gid: gid
                     },
                     success: function (arg) {
                         console.log(arg);
                         if (arg.status) {
-                            {#createRow(portData, arg.data);#}
+                            alert(arg.inf)
                             window.location.reload();
                             $('#myModal').modal('hide');
                         }
                     }
                 })
-
             })
+        };
 
-        }
+
+
+
 
     </script>
 {% endblock %}
