--- a/templates/test.html
+++ b/templates/test.html
@@ -28,7 +28,23 @@
     </form>
 
 
-    <div class="my_class_content">
+
+    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false"
+       aria-controls="collapseExample">
+        Link with href
+    </a>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample"
+            aria-expanded="false" aria-controls="collapseExample">
+        Button with data-target
+    </button>
+    <div class="collapse" id="collapseExample">
+        <div class="well">
+            ...
+        </div>
+    </div>
+
+
+    <div class="my_class_content hidden">
 
 
         {% for t in t_list %}
